--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     "outputDirectory": "public",
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "false",
+        "APP_DEBUG": "true",
         "APP_URL": "https://backend-velody.vercel.app",
         "APP_KEY": "base64:94FT0+HXSZdF1dcR6cuxJl4/C+Nf779oFbUK12GcejM=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
